rtg_tests/negative/import_cycle/cmd/app/main.go
package main

import _ "example.com/rtgtests/negative/cycle/lib"

func main() {}
